--- a/Parfume/Views/Shared/_Layout.cshtml
+++ b/Parfume/Views/Shared/_Layout.cshtml
@@ -167,7 +167,7 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-controller="Report" asp-action="ReportCreate">
+                            <a asp-controller="Report" asp-action="ReportCreateNew">
                                 <i class="fas fa-wallet"></i>
                                 Hesabat hamsı
                             </a>
