--- a/Parfume/Views/Report/ReportPayment.cshtml
+++ b/Parfume/Views/Report/ReportPayment.cshtml
@@ -21,23 +21,23 @@
 <div hidden class="row text-center generalView">
 
     <div class="col-2 mt-3">
-        <label class="labelColor">Nağd satışdan gələn</label>
+        <label class="labelColor">Nağd satışdan gələn</label><br />
         <input type="text" class="form-control   CachMany" readonly />
     </div>
     <div class="col-2 mt-3">
-        <label class="labelColor">Kredit ödənişilə gələn  </label>
+        <label class="labelColor">Ayliq ödənişilə gələn pulun miqdari </label>
         <input type="text" class="form-control  CrediteMany " readonly />
     </div>
     <div class="col-2 mt-3">
-        <label class="labelColor">Balans </label>
+        <label class="labelColor">Balans </label><br />
         <input type="text" class="form-control  Balans " readonly />
     </div>
     <div class="col-2 mt-3">
-        <label class="labelColor">Borc </label>
+        <label class="labelColor">Ayliq ödənişdən qalan  pulun miqdari </label>
         <input type="text" class="form-control  Debt " readonly />
     </div>
-    <div class="col-2 mt-3">
-        <label class="labelColor">Ümümis pul</label>
+    <div   class="col-2 mt-3">
+        <label class="labelColor">Ümümis ayliq ödənişin miqdarı</label>
         <input type="text" class="form-control  Important " readonly />
     </div>
 </div>
