--- a/Parfume/Views/Report/ReportCreateNew.cshtml
+++ b/Parfume/Views/Report/ReportCreateNew.cshtml
@@ -70,24 +70,28 @@
     <div class="row">
 
         <div class="col-3 mt-3">
-            <label class="labelColor">Balans (Satilan mallarindan qalan borcdan odenilen)</label>
+            <label class="labelColor">Kreditle satiş (total)</label>
             <input type="text" class="form-control  GeneralMany " readonly />
         </div>
         <div class="col-3 mt-3">
-            <label class="labelColor">Ümümi satiş(Satilan mallarin total cemi)</label>
+            <label class="labelColor">Ümümi satiş(Satilan mallarin total)</label>
             <input type="text" class="form-control   SaleMany" readonly />
         </div>
-        <div class="col-3 mt-3">
+        <div   class="col-3 mt-3">
             <label class="labelColor">Ödənməli pulun miqdari (Secilen vaxt araligindaki ayliq odenislerin odemiyenlerin cemi) </label>
             <input type="text" class="form-control   NeededMany" readonly />
         </div>
-        <div class="col-3 mt-3">
-            <label class="labelColor">Borc (Secilen vaxtda borclarin cemi)</label>
+        <div class="col-3 mt-3"  >
+            <label class="labelColor">Ümumi yigilacaq pul</label>
             <input type="text" class="form-control  Debt " readonly />
         </div>
         <div class="col-3 mt-3">
             <label class="labelColor">Qazanc(Secilen vaxta qazanc maya ile satis arasinda ferq)</label>
             <input type="text" class="form-control   income" readonly />
+        </div>
+        <div class="col-3 mt-3">
+            <label class="labelColor">Rasxod(Secilen vaxta )</label>
+            <input type="text" class="form-control   expense" readonly />
         </div>
     </div>
   
@@ -95,4 +99,4 @@
 </div>
  
 
-<script src="~/CustomScript/Scripts/ReportCreateNew.js"></script>
+<script src="~/CustomScript/Scripts/ReportCreateNew.js?v=3"></script>
