--- a/Parfume/Views/Home/HistoryPaymentDate.cshtml
+++ b/Parfume/Views/Home/HistoryPaymentDate.cshtml
@@ -61,4 +61,4 @@
     </div>
 </div>
 
-<script src="~/CustomScript/Scripts/HistoryPay.js"></script>
+<script src="~/CustomScript/Scripts/HistoryPay.js?v=6"></script>
