--- a/Parfume/Views/Home/WhoPays.cshtml
+++ b/Parfume/Views/Home/WhoPays.cshtml
@@ -20,6 +20,8 @@
                     <th>Borcu<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th>Ödəniş tarixi<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
                     <th>Alış tarixi<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
+                    <th>Hansi ayın ödənişidir<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
+                    @*<th>Qeyd<br /><input type="text" placeholder="Axtar" class="form-control" /></th>*@
                     <th>Əməliyyat<br /><input type="text" placeholder="Axtar" class="form-control" /></th>
 
                 </tr>
@@ -29,12 +31,14 @@
                 @foreach (var item in Model)
                 {
                     string color = "";
-                    if (item.PaymentDate<DateTime.Now.AddDays(1))
+                    
+                    if (item.PaymentDate?.Date<DateTime.Now.AddDays(2).Date)
                     {
                         color = "red";
-                    }else if(item.PaymentDate<DateTime.Now.AddDays(3)){
-                         color="yellow";
-                }
+                    }else if(item.PaymentDate?.Date < DateTime.Now.AddDays(4).Date)
+                    {
+                        color="yellow";
+                    }
 
                 <tr style="background-color:@color" data-href="@Url.Action("Pay","Home",new {orderId=item.Id })">
                     <td>@index</td>
@@ -48,6 +52,14 @@
                     <td>@item.Debt</td>
                     <td>@item.PaymentDate?.ToString("dd/MM/yyyy")</td>
                     <td>@item.CreateDate.ToString("dd/MM/yyyy")</td>
+                    <td>
+                        @if (item.PaymentHistories.Any(c => c.PayPrice == null))
+                        {
+                            @item.PaymentHistories.Where(c => c.PayPrice == null).First().Queue;
+                }
+                 
+                    </td>
+                    @*<td>@(item.PaymentHistories.Any(c=>c.Note!=null)==true ? item.PaymentHistories.Where(c => c.Note != null).First().Note:""  )</td>*@
                    @if (User.IsInRole("Admin"))
                 {
                     <td class="text-center removeOrder" data-OrderId="@item.Id"><a><i style="color:red" class="fas fa-trash-alt"></i></a></td>
