--- a/Parfume/Views/Home/WhoPays.cshtml
+++ b/Parfume/Views/Home/WhoPays.cshtml
@@ -64,6 +64,10 @@
                 {
                     <td class="text-center removeOrder" data-OrderId="@item.Id"><a><i style="color:red" class="fas fa-trash-alt"></i></a></td>
                 }
+                else
+                {
+                    <td></td>
+                }
                 </tr>
                     index++;
                 }
