--- a/Parfume/Views/Customer/CustomerChange.cshtml
+++ b/Parfume/Views/Customer/CustomerChange.cshtml
@@ -63,7 +63,7 @@
         <div class="col-3">
             <label class="labelColor">Adı və nömrəsi</label>
             <input type="text" class="form-control thirdName" value="@Model.ThirdNumberWho" />
-            <input type="text" class="form-control thirdNumber " value="@Model.ThirdNumberWho" />
+            <input type="text" class="form-control thirdNumber " value="@Model.ThirdNumber" />
         </div>
     </div>
 
