--- a/Parfume/Views/Home/History.cshtml
+++ b/Parfume/Views/Home/History.cshtml
@@ -47,7 +47,11 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <td class="text-center removeOrder" data-OrderId="@item.Id"><a><i style="color:red" class="fas fa-trash-alt"></i></a></td>
-                        }
+                }
+                else
+                {
+                    <td></td>
+                }
                     </tr>
                     index++;
                 }
