--- a/Parfume/Views/Home/HistoryDetails.cshtml
+++ b/Parfume/Views/Home/HistoryDetails.cshtml
@@ -99,10 +99,14 @@
             <label class="labelColor">Qiyməti</label>
             <input type="text" readonly class="form-control text-center  " value="@Model.Price" />
         </div>
-        <div class="col-2 mt-3">
-            <label class="labelColor">Maya qiyməti</label>
-            <input type="text" readonly class="form-control text-center  " value="@Model.Cost" />
-        </div>
+        @if (User.IsInRole("Admin"))
+        {
+            <div class="col-2 mt-3">
+                <label class="labelColor">Maya qiyməti</label>
+                <input type="text" readonly class="form-control text-center  " value="@Model.Cost" />
+            </div>
+        }
+
         <div class="col-2 mt-3">
             <label class="labelColor">Total Qiyməti</label>
             <input type="text" readonly class="form-control text-center  " value="@Model.TotalPrice" />
